--- a/new.html
+++ b/new.html
@@ -27,9 +27,9 @@
 <a href="http://uki.life/"> click here to go to UKI</a>
 <p><a href="audio.html" target="iframe_a">target</a></p>
 <ul>
- <li>Orange Juice</li>
- <li>Papaya Juice</li>
- <li>Apple Juice</li>
+ <li>Banana Juice</li>
+ <li>Fruit Juice</li>
+ <li>Mango Juice</li>
 </ul>
 
 <ol>
